Detrending rgb values

--- a/rPPG/rPPG.vcxproj
+++ b/rPPG/rPPG.vcxproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImageProcessingFunctions.h" />
+    <ClInclude Include="MathSignal.h" />
     <ClInclude Include="RealTimePlot.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -140,15 +141,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\manopencv\install\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\manopencv\install\include;C:\Users\Haider\source\repos\rPPg-C-\Filters\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\manopencv\install\x86\vc15\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_tracking430d.lib;opencv_tracking430.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\manopencv\install\x86\vc15\lib;C:\Users\Haider\source\repos\rPPg-C-\Filters\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_tracking430d.lib;opencv_tracking430.lib;iir.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
